Allow growing bars inwards

--- a/example/index.html
+++ b/example/index.html
@@ -13,6 +13,7 @@
       .height(1000)
       .barWidth(10)
       .barMaxHeight(100)
+      .growOutwards(false)
       .innerCircleRadius(100);
 
     d3.select('main')
