--- a/example/index.html
+++ b/example/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<style>
+.outer-circle,
+text {
+  fill: #7ab800;
+}
+.inner-circle {
+  fill: #ff0000;
+}
+text {
+  text-transform: uppercase;
+  font-family: Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+</style>
 
 <body>
-  <main></main>
+  <main>
+  </main>
 
   <script src="../node_modules/d3/build/d3.js"></script>
   <script src="../build/bundle.js"></script>
   <script>
-    var data = [10, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20];
+    var data = [10, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 10, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20, 15, 32, 10, 8, 20];
     var chart = d3OKLogo()
       .width(1000)
-      .height(1000)
-      .barWidth(10)
-      .barMaxHeight(100)
-      .growOutwards(false)
-      .innerCircleRadius(100);
+      .height(1000);
 
     d3.select('main')
       .datum(data)
